# bannerlators

./: BANNERLATORS_PROGRESS_LOG.md  BIONIC_FG_INTEGRATION_REPORT.md  BIONIC_FG_SPIKE_RUNBOOK.md  PROGRESS_LOG.md  README.md  RESUME_bionic_fg_phase3.md  build-lsfg-android.sh
.claude/agents/: ama-agent.md  android-app-engineer.md  graphics-vulkan-engineer.md  native-steam-engineer.md  release-device-engineer.md  wine-compat-engineer.md
.github/ISSUE_TEMPLATE/: ask-the-ai.yml
.github/workflows/: ama-answer.yml  build-artifacts.yml  build-bionic-fg.yml  build-lsfg.yml  build-vkbasalt.yml  main-node24-test.yml  main.yml  release-differentpkg.yml  release.yml
android_sysvshm/: android_sysvshm.c
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/lsfg-vk/: CMakeLists.txt
app/src/main/cpp/virglrenderer/server/: virgl_server.c  virgl_server_renderer.c
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  alsa_client.c  downscale.frag  downscale_frag.h  drawable.c  gpu_image.c  vulkan.c  vulkan_jni.cpp  xconnector_epoll.c
app/src/main/cpp/xr/: main.c
app/src/main/java/com/winlator/cmod/contents/: ContentsManager.java
app/src/main/java/com/winlator/star/: BigPictureActivity.java  InputControlsFragment.java  MainActivity.kt  XServerDisplayActivity.java
app/src/main/java/com/winlator/star/box64/: Box64EditPresetDialog.java
app/src/main/java/com/winlator/star/components/: ComponentExecInstaller.kt  ComponentInstaller.kt
app/src/main/java/com/winlator/star/container/: Container.java  ContainerManager.java
app/src/main/java/com/winlator/star/contentdialog/: DXVKConfigDialog.java
app/src/main/java/com/winlator/star/contents/: AdrenotoolsManager.java  ContentsManager.java  Downloader.java
app/src/main/java/com/winlator/star/core/: AppUtils.java  DefaultVersion.java  DownloadProgressDialog.java  FileUtils.java  ProcessHelper.java  TarCompressorUtils.java  WinePath.kt  WineThemeManager.java
app/src/main/java/com/winlator/star/fexcore/: FEXCoreEditPresetDialog.java
app/src/main/java/com/winlator/star/inputcontrols/: ControlElement.java
app/src/main/java/com/winlator/star/lsfg/: LsfgManager.java
app/src/main/java/com/winlator/star/renderer/: EffectComposer.java  GLRenderer.java  GPUImage.java
app/src/main/java/com/winlator/star/store/: AmazonGameDetailActivity.kt  AmazonGamesActivity.kt  AmazonLoginActivity.kt  AmazonMainActivity.kt  EpicFreeGamesActivity.kt  EpicGameDetailActivity.kt  EpicGamesActivity.kt  EpicLoginActivity.kt  EpicMainActivity.kt  GogGameDetailActivity.kt  GogGamesActivity.kt  GogLoginActivity.kt  GogMainActivity.kt  QrLoginActivity.kt  SteamDepotDownloader.kt  SteamGameDetailActivity.kt  SteamGamesActivity.kt  SteamLoginActivity.kt  SteamMainActivity.kt  SteamRepository.java
app/src/main/java/com/winlator/star/ui/: AppDrawer.kt  AppNavGraph.kt  PreloaderOverlay.kt  Screen.kt  XServerDialogHost.kt  XServerDialogState.kt  XServerDrawer.kt  XServerDrawerState.kt
app/src/main/java/com/winlator/star/widget/: FrameRating.java  FrameRatingHorizontal.java  HudMetrics.java  InputControlsView.java  PerfHudView.java  XServerView.java
app/src/main/java/com/winlator/star/winhandler/: WinHandler.java
app/src/main/java/com/winlator/star/xenvironment/: ImageFsInstaller.java
app/src/main/res/drawable/: bordered_panel.xml  dialog_background_dark_blue.xml  hud_horizontal_background.xml  icon_popup_menu_settings.xml  icon_settings.xml  proton_icon_button_background.xml  ui_add_button_outline.xml
app/src/main/res/layout/: about_dialog.xml  big_picture_activity.xml  big_picture_list_item.xml  container_list_item.xml  download_progress_dialog.xml  frame_rating.xml  hud_horizontal.xml  screen_effect_dialog.xml  shortcut_grid_item.xml  spinner_dropdown_item_dark.xml
app/src/main/res/menu/: main_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
docs/: SGSR_HDR_VULKAN_PLAN.md  STEAM_PLUVIA_PORT_PLAN.md  render_upgrades_report.html
keystore/: testkey.p12
lsfg-vk-android/: README.md
patches/: bionic-fg-bannerlator-fixes.patch
tests/: test_invariant_android_sysvshm.c
(+36 files in other folders)
